# app-aleo

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  APP_SPECIFICATION.md  CHANGELOG.md  Makefile  README.md
.clusterfuzzlite/: Dockerfile
.doxygen/: Doxyfile
.github/workflows/: build_and_functional_tests.yml  codeql.yml  codeql_checks.yml  coding_style_checks.yml  guidelines_enforcer.yml  misspellings_checks.yml
doc/: ACCOUNT.md  APDU.md  SIGN_TRANSACTION.md
fuzzing/: CMakeLists.txt  fuzz_tx_parser.c
fuzzing/harness/: fuzz_sign_transaction.c
src/: app_main.c  constants.h  globals.h  sw.h  types.h
src/account/: account.c  account.h  signature.c  signature.h
src/apdu/: dispatcher.c  dispatcher.h
src/crypto/: bech32.c  bech32.h  bhp_1024.c  bhp_1024.h  bhp_1024_parameters.c  bhp_1024_parameters.h  bhp_512.c  bhp_512.h  bhp_512_parameters.c  bhp_512_parameters.h  bigint_256.c  bigint_256.h  bits.c  bits.h  field.c  field.h  fp256.c  fp256.h  group.c  group.h  poseidon.c  poseidon.h  poseidon_parameters.c  poseidon_parameters.h  scalar.c  scalar.h
src/db/: db.c  db.h  db_program_function.c  db_program_function.h  db_tokens.c  db_tokens.h
src/format/: format_u128.c  format_u128.h
src/handler/: get_address.c  get_address.h  get_app_name.c  get_version.c  get_view_key.c  get_view_key.h  sign_transaction.c  sign_transaction.h
src/helper/: format_decimal.c  format_decimal.h  send_reponse.c  send_response.c  send_response.h
src/swap/: aleo_swap_utils.c  aleo_swap_utils.h  handle_check_address.c  handle_get_printable_amount.c  handle_swap.h  handle_swap_sign_transaction.c
src/transaction/: tx.h  tx_extract.c  tx_parse.c  tx_types.h
src/ui/: display.h  menu_nbgl.c  nbgl_display_address.c  nbgl_display_transaction.c  nbgl_display_view_key.c
src/ui/action/: validate.c  validate.h
tests/application_client/: bech32m.py  bigint_256.py  command_sender.py  currency_utils.py  response_unpacker.py  setup.cfg  transaction.py
tests/standalone/: requirements.txt  test_app_mainmenu.py  test_appname_cmd.py  test_error_cmd.py  test_get_address_cmd.py  test_get_view_key_cmd.py  test_name_version.py  test_sign_transaction.py  test_version_cmd.py  usage.md  utils.py
tests/swap/: README.md  cal_helper.py  test_aleo.py
tools/python/: bhp_1024.json  db_program_function.c  db_program_function.h  gen_apdu.py  gen_bhp_1024.py  gen_function_id.py  gen_poseidon_const.py  gen_program_function.py  gen_tokens.py  program_function.json  test.json  test_apdu.py  test_batch.json  test_private.json  test_public.json  test_token_usad_public.json  test_token_usdcx_public.json  tokens.json
tools/python/algorithms/: BHP_1024_lookup.json  BHP_512_lookup.json  bhp.py  poseidon_default.py
tools/python/crypto/: bigint_256.py  field.py  fp_256.py  group.py  scalar.py
tools/python/crypto/codecs/: bech32m.py
unit-tests/: CMakeLists.txt  gen_coverage.sh  test_account.c  test_bhp_1024.c  test_bigint_256.c  test_bits.c  test_db.c  test_field.c  test_formatting.c  test_fp256.c  test_group.c  test_poseidon.c  test_scalar.c  test_send_response.c  test_signature.c  test_transaction.c  test_tx_parser.c  test_tx_utils.c
unit-tests/stubs/: ledger_assert.h  os.h  os_hdkey.h  os_hdkey_stubs.c  os_io.h  os_io_legacy.h  os_lib.h  os_print.h  os_utils_stubs.c  ox.h  ox_bn_stubs.c  ox_ec_stubs.c
unit-tests/stubs/cx/: cx.h  cx_bn.c  cx_ec.h  cx_ec_domain.c  cx_ecpoint.c  cx_errors.h  cx_montgomery.c  cx_mpi.c  cx_twisted_edwards.c  cx_weierstrass.c  cxlib.h
unit-tests/stubs/nbgl/: nbgl_use_case.h  nbgl_use_case_stubs.c
